--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.blogspot.geekabyte</groupId>
+    <groupId>com.myproject.sample</groupId>
     <artifactId>sample-web-app</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
@@ -16,9 +16,55 @@
             <version>3.1.0</version>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>1.0.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <artifactId>exec-maven-plugin</artifactId>
+                <groupId>org.codehaus.mojo</groupId>
+                <version>1.5.0</version>
+                <executions>
+                    <execution>
+                        <id>Setup Git Hook for Pre-push</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <classpathScope>test</classpathScope>
+                            <includePluginDependencies>true</includePluginDependencies>
+                            <mainClass>com.myproject.sample.git.ImplementGitHook</mainClass>
+                            <additionalClasspathElements>
+                                <additionalClasspathElement>${basedir}/src/test/resources/com/myproject/sample/git/pre-push</additionalClasspathElement>
+                            </additionalClasspathElements>
+                            <arguments>
+                                <argument>target/test-classes/com/myproject/sample/git/pre-push</argument>
+                                <argument>.git/hooks/pre-push</argument>
+                            </arguments>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.5.1</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>
                     org.apache.maven.plugins
@@ -33,10 +79,6 @@
                 <groupId>com.groupon.maven.plugin.json</groupId>
                 <artifactId>json-schema-validator</artifactId>
                 <version>1.2.0</version>
-            </plugin>
-            <plugin>
-                <artifactId>json-schema-validator</artifactId>
-                <groupId>com.groupon.maven.plugin.json</groupId>
                 <executions>
                     <execution>
                         <phase>verify</phase>
@@ -58,19 +100,36 @@
                     </validations>
                 </configuration>
             </plugin>
-
-        </plugins>
-
-    </build>
-    <reporting>
-        <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
                 <version>3.6</version>
                 <configuration>
+
+                    <sourceEncoding>utf-8</sourceEncoding>
+                    <minimumTokens>100</minimumTokens>
                     <targetJdk>1.8</targetJdk>
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>check</goal>
+                            <goal>cpd-check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+
+        </plugins>
+
+    </build>
+
+    <reporting>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>2.3</version>
             </plugin>
         </plugins>
     </reporting>
